# simple-video-player

./: .gitignore  CMakeLists.txt  README.md  deploy.bat  main.cpp  mainwindow.cpp  mainwindow.h  playlistdialog.cpp  playlistdialog.h  setup.iss
